# esp_emote_gen_player

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml
.github/workflows/: build.yml  upload_component.yml
include/: emote_gen_player.h
src/: emote_gen_player.c  emote_gen_player_assets.c  emote_gen_player_priv.h
test_apps/: CMakeLists.txt  README.md  sdkconfig.defaults
test_apps/main/: CMakeLists.txt  app_main.c  board_gfx.c  board_gfx.h  idf_component.yml  test_emote_gen_player.c
